# icd-spellcheck-de

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
src/icd_spellcheck_de/: __init__.py  utils.py
